# Crawlmind

./: MANIFEST.in  cli.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: publish_to_pypi.yml
crawlmind/: crawl_manager.py  llm_completion.py  logger.py  parser.py  scraper.py
crawlmind.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
crawlmind/crawler/: crawler.py  intelligent_crawler.py
crawlmind/tests/: test_intelligent_crawler.py  test_llm_completion.py  test_scraper.py
