# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawlmind"
version = "0.1.0"
description = "A LLM-powered OSINT web crawler package"
authors = [{ name="Your Name", email="you@example.com"}]
license = {file="LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Source Code" = "https://github.com/yourname/crawlmind"
"Tracker" = "https://github.com/yourname/crawlmind/issues"
